# langextract

langextract-azureOpenAI/: README.md  pyproject.toml  test_plugin.py
langextract-azureOpenAI/langextract_azureOpenAI/: __init__.py  provider.py
