[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langextract-azureOpenAI"
version = "0.1.0"
description = "LangExtract provider plugin for Azure OpenAI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "langextract>=1.0.0",
    "langchain-openai>=0.2.0",
]

[project.entry-points."langextract.providers"]
azureOpenAI = "langextract_azureOpenAI.provider:AzureOpenAILanguageModel"

[tool.setuptools.packages.find]
where = ["."]
include = ["langextract_azureOpenAI*"]
